--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -25,7 +25,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mysql://localhost:3306/java_scaffolding?useUnicode=true&characterEncoding=UTF-8&verifyServerCertificate=false&useSSL=false
     username: root
-    password: 951106
+    password: ****
     driver-class-name: com.mysql.jdbc.Driver
 #    hikari:
 #      maximum-pool-size: 10
@@ -40,7 +40,7 @@ spring:
   redis:
     host: 192.168.0.62
     port: 6379
-#    password: root
+#    password: ***
 
   jackson:
     date-format: yyyy-MM-dd HH:mm
