--- a/src/main/resources/application-mybatis-local.yml
+++ b/src/main/resources/application-mybatis-local.yml
@@ -20,25 +20,20 @@ server:
       prefix: access_log
       suffix: .log
 
-spring:
+# database config
+hikari:
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/****?useUnicode=true&characterEncoding=UTF-8&verifyServerCertificate=false&useSSL=false
+    jdbcUrl: jdbc:mysql://localhost:3306/java_scaffolding?useUnicode=true&characterEncoding=UTF-8&verifyServerCertificate=false&useSSL=false
     username: root
-    password: ******
-    driver-class-name: com.mysql.jdbc.Driver
-#    hikari:
-#      maximum-pool-size: 10
-#      connection-timeout: 20
-#      connection-test-query: select 1
+    password: ****
+    driverClassName: com.mysql.jdbc.Driver
+    maximumPoolSize: 10
+    connectionTestQuery: select 1
 
-  jpa:
-    show-sql: true
-    generate-ddl: true
-    database-platform: org.hibernate.dialect.MySQL57Dialect
-
+# spring config
+spring:
   redis:
-    host: 127.0.0.1
+    host: localhost
     port: 6379
 #    password: ****
 
@@ -53,6 +48,15 @@ spring:
 
   thymeleaf:
     cache: false
+
+# mybatis config
+mybatis:
+  type-aliases-package: web.scaffolding.domain
+  mapper-locations: classpath:persistent/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    default-fetch-size: 100
+    default-statement-timeout: 30
 
 logging:
   config: classpath:logback.xml
